--- a/rapidsmsrw1000/apps/webapp/static/webapp/stylesheets/thoureports.scss
+++ b/rapidsmsrw1000/apps/webapp/static/webapp/stylesheets/thoureports.scss
@@ -40,7 +40,7 @@ $numleft2: 20;
 
  #Background 
 { 
-	background: url('/static/webapp/images/reports/Background.png') repeat-x;
+	background: url('../images/reports/Background.png') repeat-x;
 	 left: 0px; 
 	 top: 0px; 
 	 position: absolute; 
@@ -81,7 +81,7 @@ $numleft2: 20;
 
  #Layer1copy 
 { 
-	background: url('/static/webapp/images/reports/Layer1copy.png') repeat-x;
+	background: url('../images/reports/Layer1copy.png') repeat-x;
 	 left: 0px; 
 	 top: 251px; 
 	 position: absolute; 
@@ -892,7 +892,7 @@ $numleft2: 20;
 
  #Layer1copy_2 
 { 
-	background: url('/static/webapp/images/reports/banner_background.png') repeat-x;
+	background: url('../images/reports/banner_background.png') repeat-x;
 	 left: 0px; 
 	 top: 0px; 
 	 position: absolute; 
@@ -936,7 +936,7 @@ $numleft2: 20;
 
  #Layer18copy8 
 { 
-	background: url('/static/webapp/images/reports/Layer18copy8.png') repeat-x;
+	background: url('../images/reports/Layer18copy8.png') repeat-x;
 	 left: 0px; 
 	 top: 0px; 
 	 position: absolute; 
@@ -947,7 +947,7 @@ $numleft2: 20;
 
  #Layer19copy8 
 { 
-	background: url('/static/webapp/images/reports/Layer19copy8.png') repeat-x;
+	background: url('../images/reports/Layer19copy8.png') repeat-x;
 	 left: 0px; 
 	 top: 3px; 
 	 position: absolute; 
@@ -1226,7 +1226,7 @@ $numleft2: 20;
 
  #Layer10 
 { 
-	background: url('/static/webapp/images/reports/Layer10.png') repeat-x;
+	background: url('../images/reports/Layer10.png') repeat-x;
 	 left: 0px; 
 	 top: 189px; 
 	 position: absolute; 
